--- a/app/src/main/res/layout/item_one.xml
+++ b/app/src/main/res/layout/item_one.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_margin="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
     <TextView
         android:textColor="@color/colorGray"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content" />
         <TextView
             android:textColor="@color/colorGray"
-            android:layout_toRightOf="@+id/tv_auther"
+            android:layout_toRightOf="@+id/tv_author"
             android:text="gnuey"
             android:id="@+id/tv_authorName"
             android:layout_width="wrap_content"
