--- a/app/src/main/res/layout/item_one_head.xml
+++ b/app/src/main/res/layout/item_one_head.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 <ImageView
     android:id="@+id/iv_image"
@@ -20,7 +20,7 @@
             android:textColor="@color/colorGray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <view
+        <ImageView
             android:id="@+id/hint"
             android:layout_toRightOf="@id/tv_title"
             android:background="@color/colorGray"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="40dp"
         android:textColor="@color/colorBlack"
         android:text="先是太胆小，明知不该做的事却不敢不做；后来也还是太胆小，明知该做的事却不敢去做。"
-        android:id="@+id/iv_forward"
+        android:id="@+id/tv_forward"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
