--- a/app/src/main/res/layout/item_one.xml
+++ b/app/src/main/res/layout/item_one.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="10dp"
+    android:layout_marginTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorWhite">
     <TextView
         android:textColor="@color/colorGray"
         android:text="-连载-"
@@ -13,6 +14,8 @@
         android:layout_height="wrap_content" />
 <TextView
     android:layout_marginTop="10dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
     android:textSize="20dp"
     android:typeface="monospace"
     android:textColor="@color/colorBlack"
@@ -21,6 +24,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
     <RelativeLayout
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -40,12 +45,16 @@
 
     </RelativeLayout>
     <ImageView
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/all_fill"
         android:id="@+id/iv_image"
+        android:adjustViewBounds="true"
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
+        android:layout_height="wrap_content" />
     <TextView
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:id="@+id/tv_forward"
         android:textColor="@color/colorGray"
         android:layout_marginTop="10dp"
