--- a/app/src/main/res/layout/item_one_head.xml
+++ b/app/src/main/res/layout/item_one_head.xml
@@ -2,101 +2,121 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
-<ImageView
-    android:id="@+id/iv_image"
-    android:layout_width="match_parent"
-    android:layout_height="240dp" />
-    <RelativeLayout
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_marginRight="5dp"
-            android:id="@+id/tv_title"
-            android:text="插画"
-            android:textColor="@color/colorGray"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:id="@+id/hint"
-            android:layout_toRightOf="@id/tv_title"
-            android:background="@color/colorGray"
-            android:layout_width="1dp"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/colorGray"
-            android:layout_toRightOf="@id/hint"
-            android:text="花芍子"
-            android:id="@+id/tv_pic_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
-    <TextView
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="40dp"
-        android:textColor="@color/colorBlack"
-        android:text="先是太胆小，明知不该做的事却不敢不做；后来也还是太胆小，明知该做的事却不敢去做。"
-        android:id="@+id/tv_forward"
+
+    <ImageView
+        android:id="@+id/iv_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <TextView
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="插画"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/one_text_mini_size" />
+
+        <TextView
+            android:id="@+id/tv_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_title"
+            android:text="|"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/one_text_mini_size" />
+
+        <TextView
+            android:id="@+id/tv_pic_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@id/tv_hint"
+            android:text="花芍子"
+            android:textColor="@color/colorGray"
+            android:textSize="@dimen/one_text_mini_size" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_forward"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="先是太胆小，明知不该做的事却不敢不做；后来也还是太胆小，明知该做的事却不敢去做。"
+        android:textColor="@color/colorBlack" />
+
+    <TextView
         android:id="@+id/tv_words_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="狄更斯"
         android:textColor="@color/colorGray"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textSize="15dp" />
+
     <RelativeLayout
-        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="20dp">
+
         <ImageView
             android:id="@+id/iv_descovery"
-            android:src="@drawable/discovery"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/discovery" />
+
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/iv_descovery"
-            android:text="发现"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:text="发现" />
+
         <ImageView
+            android:id="@+id/iv_diary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_toLeftOf="@+id/iv_bubble_collect"
-            android:id="@+id/iv_diary"
-            android:src="@drawable/bubble_diary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:src="@drawable/bubble_diary" />
+
         <ImageView
+            android:id="@+id/iv_bubble_collect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_toLeftOf="@+id/iv_buble_share"
-            android:id="@+id/iv_bubble_collect"
-            android:src="@drawable/bubble_collect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:src="@drawable/bubble_collect" />
+
         <ImageView
+            android:id="@+id/iv_buble_share"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_toLeftOf="@+id/iv_buble_like"
-            android:id="@+id/iv_buble_share"
-            android:src="@drawable/bubble_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:src="@drawable/bubble_share" />
+
         <ImageView
-            android:layout_marginEnd="20dp"
-            android:layout_alignParentEnd="true"
             android:id="@+id/iv_buble_like"
-            android:src="@drawable/bubble_like"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/bubble_like" />
     </RelativeLayout>
 </LinearLayout>
