--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorBlack">#040404</color>
-    <color name="colorGray">#808080</color>
-    <color name="colorWhite">#ffffff</color>
+    <color name="colorGray">#979797</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorWhiteSmoke">#EEEEEE</color>
     <color name="viewBackground">@android:color/white</color>
 </resources>
