--- a/app/src/main/res/drawable/item_one_music_play_selector.xml
+++ b/app/src/main/res/drawable/item_one_music_play_selector.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/pause" android:state_enabled="true" android:state_focused="true" android:state_pressed="false" />
     <item android:drawable="@drawable/pause" android:state_enabled="true" android:state_pressed="true" />
-    <item android:drawable="@drawable/pause" android:state_checked="true" android:state_enabled="true" />
+    <item android:drawable="@drawable/pause" android:state_enabled="true" android:state_checked="true"/>
     <item android:drawable="@drawable/play" />
 </selector>
