--- a/app/src/main/res/layout/item_one_tab.xml
+++ b/app/src/main/res/layout/item_one_tab.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorWhite"
     android:fitsSystemWindows="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.gnuey.one.MainActivity">
 
-    <include layout="@layout/toolbar"/>
+    <com.gnuey.one.widget.OneTabToolbar
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_size">
+
+    </com.gnuey.one.widget.OneTabToolbar>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
