--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <resources>
     <dimen name="one_text_midle_size">13dp</dimen>
     <dimen name="one_text_mini_size">12dp</dimen>
+    <dimen name="one_margin">20dp</dimen>
+    <dimen name="toolbar_size">50dp</dimen>
 </resources>
