--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/iv_test"
         android:text="TEST"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
