--- a/app/src/main/res/layout/item_one_music.xml
+++ b/app/src/main/res/layout/item_one_music.xml
@@ -5,62 +5,105 @@
     android:orientation="vertical"
     android:background="@color/colorWhite"
     android:id="@+id/layout_music">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/frame_music"-->
+        <!--android:orientation="horizontal">-->
 
-    <FrameLayout
+        <!--<View-->
+            <!--style="@style/view_line"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1" />-->
+
+        <!--<View-->
+            <!--style="@style/view_line"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:visibility="invisible" />-->
+    <!--</LinearLayout>-->
+    <RelativeLayout
         android:id="@+id/frame_music"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <View
+                style="@style/view_line"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"/>
+            <View
+                android:visibility="invisible"
+                android:layout_below="@+id/iv_cover"
+                style="@style/view_line"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"/>
+        </LinearLayout>
         <ImageView
             android:id="@+id/iv_cover"
             android:layout_width="200dp"
             android:layout_height="200dp"
+            android:layout_centerInParent="true"
             android:scaleType="centerCrop" />
+        <LinearLayout
+            android:layout_below="@+id/iv_cover"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <View
+                style="@style/view_line"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"/>
+            <View
+                android:visibility="invisible"
+                android:layout_below="@+id/iv_cover"
+                style="@style/view_line"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/iv_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:clickable="true"
             android:src="@drawable/play" />
-    </FrameLayout>
 
-    <ImageView
-        android:id="@+id/iv_audio_platform_icom"
-        android:layout_width="26dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp" />
+        <ImageView
+            android:layout_alignParentBottom="true"
+            android:id="@+id/iv_audio_platform_icom"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_marginBottom="8dp" />
+    </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/layout_line"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/frame_music"
-        android:orientation="horizontal">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/frame_music"-->
+        <!--android:orientation="horizontal">-->
 
-        <View
-            style="@style/view_line"
-            android:layout_width="0dp"
-            android:layout_weight="1" />
+        <!--<View-->
+            <!--style="@style/view_line"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1" />-->
 
-        <View
-            style="@style/view_line"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:visibility="invisible" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_music_name"
-            android:text="musice name"
-            android:textSize="@dimen/one_text_mini_size"
-            android:textColor="@color/colorGray"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<View-->
+            <!--style="@style/view_line"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:visibility="invisible" />-->
+    <!--</LinearLayout>-->
+    <TextView
+        android:id="@+id/tv_music_name"
+        android:text="musice name"
+        android:textSize="@dimen/one_text_mini_size"
+        android:textColor="@color/colorGray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    </LinearLayout>
 </LinearLayout>
