--- a/app/src/main/res/layout/item_one_tab.xml
+++ b/app/src/main/res/layout/item_one_tab.xml
@@ -2,11 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorWhite"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    tools:context="com.gnuey.one.MainActivity">
+    android:orientation="vertical">
 
     <com.gnuey.one.widget.OneTabToolbar
         android:id="@+id/toolbar"
