--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,6 @@
     <style name="view_line">
         <item name="android:layout_height">1px</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:background">@color/colorWhiteSmoke</item>
+        <item name="android:background">@color/colorGray</item>
     </style>
 </resources>
