--- a/app/src/main/res/layout/item_one_music.xml
+++ b/app/src/main/res/layout/item_one_music.xml
@@ -1,109 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_music"
+    android:paddingTop="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/colorWhite"
-    android:id="@+id/layout_music">
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/frame_music"-->
-        <!--android:orientation="horizontal">-->
+    android:layout_gravity="center">
 
-        <!--<View-->
-            <!--style="@style/view_line"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="1" />-->
-
-        <!--<View-->
-            <!--style="@style/view_line"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:visibility="invisible" />-->
-    <!--</LinearLayout>-->
-    <RelativeLayout
-        android:id="@+id/frame_music"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <View
-                style="@style/view_line"
-                android:layout_width="wrap_content"
-                android:layout_weight="1"/>
-            <View
-                android:visibility="invisible"
-                android:layout_below="@+id/iv_cover"
-                style="@style/view_line"
-                android:layout_width="wrap_content"
-                android:layout_weight="1"/>
-        </LinearLayout>
-        <ImageView
-            android:id="@+id/iv_cover"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_centerInParent="true"
-            android:scaleType="centerCrop" />
-        <LinearLayout
-            android:layout_below="@+id/iv_cover"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <View
-                style="@style/view_line"
-                android:layout_width="wrap_content"
-                android:layout_weight="1"/>
-            <View
-                android:visibility="invisible"
-                android:layout_below="@+id/iv_cover"
-                style="@style/view_line"
-                android:layout_width="wrap_content"
-                android:layout_weight="1"/>
-        </LinearLayout>
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/iv_cover">
 
-        <ImageView
-            android:id="@+id/iv_play"
+        <View
+            style="@style/view_line"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:clickable="true"
-            android:src="@drawable/play" />
+            android:layout_weight="1" />
 
-        <ImageView
-            android:layout_alignParentBottom="true"
-            android:id="@+id/iv_audio_platform_icom"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_marginBottom="8dp" />
-    </RelativeLayout>
+        <View
+            style="@style/view_line"
+            android:layout_width="wrap_content"
+            android:layout_below="@+id/iv_cover"
+            android:layout_weight="1"
+            android:visibility="invisible" />
+    </LinearLayout>
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/frame_music"-->
-        <!--android:orientation="horizontal">-->
+    <ImageView
+        android:id="@+id/iv_cover"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <!--<View-->
-            <!--style="@style/view_line"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="1" />-->
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_cover"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_cover">
 
-        <!--<View-->
-            <!--style="@style/view_line"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:visibility="invisible" />-->
-    <!--</LinearLayout>-->
-    <TextView
-        android:id="@+id/tv_music_name"
-        android:text="musice name"
-        android:textSize="@dimen/one_text_mini_size"
-        android:textColor="@color/colorGray"
+        <View
+            style="@style/view_line"
+            android:layout_width="wrap_content"
+            android:layout_weight="1" />
+
+        <View
+            style="@style/view_line"
+            android:layout_width="wrap_content"
+            android:layout_below="@+id/iv_cover"
+            android:layout_weight="1"
+            android:visibility="invisible" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_play"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:src="@drawable/play"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
+        app:layout_constraintEnd_toEndOf="@+id/iv_cover"
+        app:layout_constraintStart_toStartOf="@+id/iv_cover"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/iv_audio_platform_icom"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/linearLayout1"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:maxLines="1"
+        android:id="@+id/tv_music_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:text="musice name"
+        android:textColor="@color/colorGray"
+        android:textSize="@dimen/one_text_mini_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_cover" />
+</android.support.constraint.ConstraintLayout>
