--- a/app/src/main/res/layout/item_one_top.xml
+++ b/app/src/main/res/layout/item_one_top.xml
@@ -21,18 +21,9 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <RelativeLayout
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
         <TextView
-            android:textColor="@color/colorGray"
-            android:text="文/"
-            android:textSize="@dimen/one_text_midle_size"
-            android:id="@+id/tv_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
+            android:paddingTop="10dp"
             android:textColor="@color/colorGray"
             android:layout_toRightOf="@+id/tv_author"
             android:text="gnuey"
@@ -41,5 +32,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    </RelativeLayout>
+
 </LinearLayout>
