--- a/app/src/main/res/layout/item_one_music.xml
+++ b/app/src/main/res/layout/item_one_music.xml
@@ -1,98 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_music"
-    android:paddingTop="10dp"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:orientation="vertical"
+    android:background="@color/colorWhite"
+    android:id="@+id/layout_music">
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/iv_cover">
-
-        <View
-            style="@style/view_line"
-            android:layout_width="wrap_content"
-            android:layout_weight="1" />
-
-        <View
-            style="@style/view_line"
-            android:layout_width="wrap_content"
-            android:layout_below="@+id/iv_cover"
-            android:layout_weight="1"
-            android:visibility="invisible" />
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_cover"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerInParent="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_cover"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_cover">
-
-        <View
-            style="@style/view_line"
-            android:layout_width="wrap_content"
-            android:layout_weight="1" />
-
-        <View
-            style="@style/view_line"
-            android:layout_width="wrap_content"
-            android:layout_below="@+id/iv_cover"
-            android:layout_weight="1"
-            android:visibility="invisible" />
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_play"
+    <FrameLayout
+        android:id="@+id/frame_music"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:clickable="true"
-        android:src="@drawable/play"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
-        app:layout_constraintEnd_toEndOf="@+id/iv_cover"
-        app:layout_constraintStart_toStartOf="@+id/iv_cover"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        android:layout_gravity="center">
+
+        <ImageView
+            android:id="@+id/iv_cover"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/iv_play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:src="@drawable/play" />
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/iv_audio_platform_icom"
         android:layout_width="26dp"
         android:layout_height="26dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@id/linearLayout1"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_marginBottom="8dp" />
 
-    <TextView
-        android:maxLines="1"
-        android:id="@+id/tv_music_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/layout_line"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:text="musice name"
-        android:textColor="@color/colorGray"
-        android:textSize="@dimen/one_text_mini_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_cover" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@+id/frame_music"
+        android:orientation="horizontal">
+
+        <View
+            style="@style/view_line"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
+
+        <View
+            style="@style/view_line"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:visibility="invisible" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_music_name"
+            android:text="musice name"
+            android:textSize="@dimen/one_text_mini_size"
+            android:textColor="@color/colorGray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+</LinearLayout>
