--- a/app/src/main/res/layout/item_one_tab.xml
+++ b/app/src/main/res/layout/item_one_tab.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
@@ -14,9 +14,14 @@
     </com.gnuey.one.widget.OneTabToolbar>
 
     <android.support.v4.view.ViewPager
+        android:layout_below="@+id/toolbar"
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v4.view.ViewPager>
-
-</LinearLayout>
+    <include layout="@layout/base_recyclerview"
+        android:visibility="gone"
+        android:layout_below="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</RelativeLayout>
