添加All专题页面点击跳转。 music页未完成。

--- a/app/src/main/res/layout/item_webview.xml
+++ b/app/src/main/res/layout/item_webview.xml
@@ -4,7 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <com.gnuey.one.widget.CsWebView
+    <!--<TextView-->
+
+        <!--android:id="@+id/text"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+    <com.github.lzyzsd.jsbridge.BridgeWebView
         android:id="@+id/wv_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
