--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -2,13 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Blue"
+    android:background="@drawable/bg_me"
     android:id="@+id/me_layout">
-    <TextView
-        android:id="@+id/text"
-        android:gravity="center"
-        android:textSize="80dp"
-        android:text="ME"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </LinearLayout>
