更改一些东西

--- a/app/src/main/res/drawable-xhdpi-v4/border_shape_white.xml
+++ b/app/src/main/res/drawable-xhdpi-v4/border_shape_white.xml
@@ -3,5 +3,5 @@
     <solid android:color="@color/colorWhite"/>
     <stroke
         android:width="0.5dp"
-        android:color="@color/colorWhiteSmoke"/>
+        android:color="@color/colorLightGray"/>
 </shape>
