--- a/app/src/main/res/layout/item_author.xml
+++ b/app/src/main/res/layout/item_author.xml
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_author" />
 
     <Button
+        android:background="@drawable/border_shape_white"
         android:layout_width="50dp"
         android:layout_height="36dp"
         android:layout_marginTop="8dp"
