--- a/app/src/main/res/layout/item_webview.xml
+++ b/app/src/main/res/layout/item_webview.xml
@@ -3,6 +3,7 @@
     android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical">
     <WebView
         android:id="@+id/wv_webview"
