--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
 
   <include layout="@layout/container"/>
 
+  <ImageView
+      android:id="@+id/iv_play"
+      android:layout_marginTop="120dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:background="@drawable/float_player_pause"
+      app:layout_anchor="@+id/container"
+      app:layout_anchorGravity="right|top" />
     <com.gnuey.one.widget.BottomNavigation
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
