--- a/app/src/main/res/layout/item_menu.xml
+++ b/app/src/main/res/layout/item_menu.xml
@@ -26,7 +26,7 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:visibility="gone"
         android:id="@+id/recycle_view"
         android:layout_width="match_parent"
@@ -37,5 +37,5 @@
         android:scrollbars="vertical"
         app:layoutManager="LinearLayoutManager">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
