--- a/app/src/main/res/layout/base_recyclerview.xml
+++ b/app/src/main/res/layout/base_recyclerview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWhiteSmoke"
     android:layout_width="match_parent"
@@ -10,4 +10,4 @@
     android:scrollbarFadeDuration="1"
     android:scrollbars="vertical"
     app:layoutManager="LinearLayoutManager">
-</android.support.v7.widget.RecyclerView>
+</androidx.recyclerview.widget.RecyclerView>
